--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,6 @@ bld/
 [Oo]bj/
 [Ll]og/
 
-wwwroot/lib/
-
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
@@ -288,3 +286,5 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
+
+**/wwwroot/lib/**
