--- a/HttpLogger/.vscode/launch.json
+++ b/HttpLogger/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceRoot}/HttpLogger/bin/Debug/netcoreapp2.0/HttpLogger.dll",
+            "program": "${workspaceRoot}/bin/Debug/netcoreapp2.0/HttpLogger.dll",
             "args": [],
-            "cwd": "${workspaceRoot}/HttpLogger",
+            "cwd": "${workspaceRoot}",
             "stopAtEntry": false,
             "internalConsoleOptions": "openOnSessionStart",
             "launchBrowser": {
